@@ -19,52 +19,66 @@ public class Game {
     public short DisplayMenu() {
     
         boolean done = false;
-        short selection = 100;
+        int selection = 100;
         Scanner inOption = new Scanner(System.in);
 
         clearScreen();
-        System.out.println("-----------------------------------------------------");
-        System.out.println("|        ***  Choose from these choices   ***       |");
-        System.out.println("-----------------------------------------------------");
-        System.out.println("|  1 - Easy  : Guess a number between 1 and 20      |");
-        System.out.println("-----------------------------------------------------");
-        System.out.println("|  2 - Normal: Guess a number between 1 and 100     |");
-        System.out.println("-----------------------------------------------------");
-        System.out.println("|  3 - Hard  : Guess a number between 1 and 1000    |");
-        System.out.println("-----------------------------------------------------");
-        System.out.println("|  0 - Exit                                         |");
-        System.out.println("-----------------------------------------------------");
-        System.out.println("\n > ");
+        System.out.println("#####################################################");
+        System.out.println("#        ***  Choose from these choices   ***       #");
+        System.out.println("#####################################################");
+        System.out.println("#  1 - Easy  : Guess a number between 1 and 20      #");
+        System.out.println("#---------------------------------------------------#");
+        System.out.println("#  2 - Normal: Guess a number between 1 and 100     #");
+        System.out.println("#---------------------------------------------------#");
+        System.out.println("#  3 - Hard  : Guess a number between 1 and 1000    #");
+        System.out.println("#---------------------------------------------------#");
+        System.out.println("#  0 - Exit                                         #");
+        System.out.println("#####################################################");
     
         while (!done) {
             try {
-                selection = ((short) inOption.nextInt());
-    
+                selection = (inOption.nextInt());
+
                 done = (selection >= 0 && selection <= 3);
                 
                 if (!done) {
-                    throw new Exception("Please enter 0, 1, 2 or 3:");
+                    throw new Exception("Please enter 0, 1, 2 or 3: ");
                 }
                 
+            } catch (InputMismatchException e) {
+                System.err.println(inOption.next() + " was not valid input. Try again: ");
             } catch (Exception e) {
                 System.err.println(e.getMessage());
-                System.out.println("\n > ");
             }
         }
         
-        return this.GameSetup(selection);
+        return this.GameSetup( (short) selection);
     }
     
     public void clearScreen() {
-        try {
-            System.out.print("\033[H\033[2J");
-            System.out.flush();
-            if (System.getProperty("os.name").startsWith("Window")) {
-                Runtime.getRuntime().exec("cls");
-            } else {
-                Runtime.getRuntime().exec("clear");
+        try
+        {
+            final String os = System.getProperty("os.name");
+
+            if (os.contains("Windows"))
+            {
+                System.out.println("** cls **");
+                System.out.println("\f");
+                System.out.println("\f");
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
             }
-        } catch (IOException e) {
+            else
+            {
+                System.out.println("** clear **");
+                for (int i = 0; i < 1000; i++) {
+                    System.out.println();
+                }
+                Process proc = Runtime.getRuntime().exec("clear");
+                proc.waitFor();
+            }
+        }
+        catch (final Exception e)
+        {
             for (int i = 0; i < 1000; i++) {
                 System.out.println();
             }
@@ -77,37 +91,46 @@ public class Game {
             case 0:
                 return option;
             case 1:
-                rNumber.setMaximum(20);
+                rNumber.SetMaximum(20);
                 break;
             case 2:
-                rNumber.setMaximum(100);
+                rNumber.SetMaximum(100);
                 break;
             case 3:
-                rNumber.setMaximum(1000);
+                rNumber.SetMaximum(1000);
                 break;
             default:
                 this.DisplayMenu();
                 return -1;
         }
-        rNumber.setMinimum(1);
+        rNumber.SetMinimum(1);
         return (short) rNumber.generateRandomNumber();
     }
     
     public void PlayGame(short inNumber) {
         
         boolean right = false;
-        
+    
+        Scanner inOption = new Scanner(System.in);
+
         while (!right) {
             try {
+                this.totalGuesses++;
+    
+                System.out.println("Type your guess: ");
+                System.out.print("> ");
+                input = inOption.next();
+
+                short guess = Short.parseShort(input);
+                right = (inNumber == guess);
                 
                 if (!right) {
-                    this.clearScreen();
-                    throw new Exception("Please enter 0, 1, 2 or 3:");
+                    clearScreen();
+                    System.out.println("Wrong!!!! Try again.");;
                 }
-            
-            } catch (Exception e) {
-                System.err.println(e.getMessage());
-                System.out.println("\n > ");
+    
+            } catch (NumberFormatException | InputMismatchException e) {
+                System.out.println(input + " was not valid input. Try again. ");
             }
         }
     }
